--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     />
 	
 	<title>
+        Turn on the light
     </title>
 	
     <meta 
@@ -25,12 +26,25 @@
         name="keywords" 
         content="" 
     />
-	
+
+    <link
+        rel="stylesheet"
+        href="css/style.css"
+        type="text/css"
+    />
+
 </head>
 
 <body>
 
-    <div></div>
+    <div id="image">
+    </div>
+
+    <div id="button">
+    </div>
+
+    <div id="dark">
+    </div>
 	
 </body>
 </html>
